@@ -1,3 +1,9 @@
+2016-12-13  Rimack Zelnick  <me@rzelnick.com>
+	* Fixes for subcommands ag, rg, and sg
+	* Now using threads, for a reading responses
+	* Perform a request, wait (sleep), then your reponses are located in
+	the global variable 'response'
+
 2016-11-15  Rimack Zelnick  <me@rzelnick.com>
 	* Modified README and .gitignore to reflect project changes
 
